--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-/* General styles */
+/* General Styles */
 
 body {
   margin: 0;
@@ -10,7 +10,7 @@ html {
   background-color: #ccc;
 }
 
-/* CARD */
+/* Card Default */
 
 .card {
   width: 35em;
@@ -21,9 +21,20 @@ html {
   border-radius: 1.5em;
 }
 
+.card p, .card h2 {
+  margin:0;
+}
+
+/* Card Header and Footer */
+
 .card header {
   background-image: linear-gradient(to bottom,rgba(0,0,0,0.1), rgba(0,0,0,0));
   border-radius: 1.5em 1.5em 0 0;
+}
+
+.card header h2 {
+  font-size:2em;
+  line-height:1.5;
 }
 
 .card footer {
@@ -31,67 +42,31 @@ html {
   border-radius: 0 0 1.5em 1.5em;
 }
 
-.card article img {
-  max-height: 100%;
-  float: right;
-}
-
-/* NEW RULE SETS */
-
-/*Write a ruleset that targets both the card header, and card footer, giving them both a
-computed total height of 50px (including a content height of 30px and padding of 10px on all sides.) 
-But express it in ems. 
-
-Default text size = 10px, 10px therefore = 1em */
+.card footer p {
+  font-size:1.5em;
+  line-height:2;
+} 
 
 .card header, .card footer {
   height:3em;
   padding:1em;
 }
 
-/* The default margin applied to the <h2> and <p> elements by the browser will
-interfere with our design, so write a rule that targets all these elements and sets their margin to 0. */
-
-.card p, .card h2 {
-  margin:0;
-}
-
-/* To stop the image from spilling out of the main business card content (the <article> element), 
-we need to give it a specific height. Set the <article>'s height to 120px, but expressed in ems. 
-Also give it a background color of semi-transparent black, resulting in a slightly darker shade 
-that lets the background red color shine through a bit too. */
+/* Card Article */
 
 .card article {
   height:12em;
   background-color:rgba(0,0,0,0.25);
 }
 
-/* Write a ruleset that gives the <h2> an effective font size of 20px (but expressed in ems) and an 
-appropriate line height to place it in the center of the header's content box. Recall from earlier
-that the content box height should be 30px — this gives you all the numbers you need to calculate the line height. */
-
-.card header h2 {
-  font-size:2em;
-  line-height:1.5;
-}
-
-/* Write a ruleset that gives the <p> inside the footer an effective font size of 15px 
-(but expressed in ems) and an appropriate line height to place it in the center of the footer's 
-content box. Recall from earlier that the content box height should be 30px — this gives you
-all the numbers you need to calculate the line height. */
-
-.card footer p {
-  font-size:1.5em;
-  line-height:2;
-} 
-
-/* As a last little touch, give the paragraph inside the <article> an appropriate padding value
-so that its left edge lines up with the <h2> and footer paragraph, and set its color to be fairly
-light so it is easy to read. */
-
 .card article p {
  padding:1em;
  color: rgba(255,255,255,0);
+}
+
+.card article img {
+  max-height: 100%;
+  float: right;
 }
 
 
